Adds support for submit buttons in dropdowns

--- a/src/assets/toolkit/styles/toolkit.scss
+++ b/src/assets/toolkit/styles/toolkit.scss
@@ -432,3 +432,21 @@ body {
 		}
 	}
 }
+
+.dropdown-menu > li > input[type=submit] {
+	display    : block;
+	padding    : 3px 20px;
+	clear      : both;
+	font-weight: 400;
+	line-height: 1.42857;
+	color      : #333;
+	white-space: nowrap;
+	text-align : left;
+	width      : 100%;
+
+	&:hover {
+		text-decoration: none;
+		color          : $white;
+		background     : $brand-primary;
+	}
+}
