Adds support for click-to-clear inputs

--- a/src/assets/toolkit/styles/toolkit.scss
+++ b/src/assets/toolkit/styles/toolkit.scss
@@ -486,3 +486,13 @@ body {
 		}
 	}
 }
+
+::-ms-clear {
+	display: none;
+}
+
+.form-control-clear {
+	z-index       : 10;
+	pointer-events: auto;
+	cursor        : pointer;
+}
