Use Glyphicons instead of FA

--- a/src/materials/components/form_elements/input_with_addon_and_clear.html
+++ b/src/materials/components/form_elements/input_with_addon_and_clear.html
@@ -4,7 +4,7 @@ notes: |
 ---
 
 <div class="input-group has-clear">
-  <span class="input-group-addon"><i class="fa fa-search"></i></span>
+  <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
   <input type="search" class="form-control" placeholder="Filter Messages">
-  <i class="form-control-clear glyphicon glyphicon-remove text-muted form-control-feedback hidden"></i>
+  <span class="form-control-clear glyphicon glyphicon-remove text-muted form-control-feedback hidden"></span>
 </div>
