Use local x-editable, remote moment.js

--- a/src/assets/toolkit/styles/toolkit.scss
+++ b/src/assets/toolkit/styles/toolkit.scss
@@ -32,6 +32,7 @@ $white: #FFF;
 // Import vendor styles
 @import "vendor/_bootstrap.scss";
 @import "vendor/bootstrap/_panels.scss";
+@import "vendor/_bootstrap-editable.scss";
 
 // Custom styles
 body,
