--- a/src/materials/components/edit_in_place/edit_in_place.html
+++ b/src/materials/components/edit_in_place/edit_in_place.html
@@ -24,7 +24,7 @@ notes: |
   <a href="#" id="fieldname" data-editable data-type="text" data-pk="1" data-url="/post" data-title="Edit Value">This will fail, but edit me anyway</a>
 </p>
 
-<p>Date (requires moment.js, included):<br>
+<p>Date (requires <a href="http://momentjs.com/">moment.js</a>, <strong>NOT</strong> included):<br>
   <a href="#" id="dob" data-editable data-type="combodate" data-value="1984-05-15" data-format="YYYY-MM-DD" data-viewformat="DD/MM/YYYY" data-template="D / MMM / YYYY" data-pk="1" data-title="Select Date of Birth" class="editable editable-click" data-original-title="" title="">15/05/1984</a>
 </p>
 
