Completes course conditions edit-in-place

--- a/src/views/cards-edit-in-place.html
+++ b/src/views/cards-edit-in-place.html
@@ -38,27 +38,27 @@ fabricator: false
 				</dl>
 				<dl>
 					<dt>Cart Rules</dt>
-					<dd>90 Degree</dd>
+					<dd><a href="#" id="fieldname" data-editable data-type="select" data-source="[{value: 1, text: '90 Degree'}, {value: 2, text: 'Cart Path Only'}, {value: 3, text: 'Walking Only'}, {value: 4, text: 'Scatter'}]" data-pk="1" data-title="Edit Cart Rules">90 Degree</a></dd>
 				</dl>
 				<dl>
 					<dt>Play Rules</dt>
-					<dd>Summer Rules</dd>
+					<dd><a href="#" id="fieldname" data-editable data-type="select" data-source="[{value: 1, text: 'Summer Rules'}, {value: 2, text: 'Winter Rules'}, {value: 3, text: 'Lift, Clean, and Place'}, {value: 4, text: 'USGA Rules'}]" data-pk="1" data-title="Edit Play Rules">Summer Rules</a></dd>
 				</dl>
 				<dl>
 					<dt>Comments</dt>
-					<dd><a href="#" id="fieldname" data-editable data-type="text" data-pk="1" data-title="Edit Comments">Alligator seen on 7th fairway, be careful.</a>
+					<dd><a href="#" id="fieldname" data-editable data-type="textarea" data-pk="1" data-title="Edit Comments">Alligator seen on 7th fairway, be careful.</a>
 				</dl>
 				<dl>
 					<dt>Beverage Cart</dt>
-					<dd>On Course</dd>
+					<dd><a href="#" id="fieldname" data-editable data-type="select" data-source="[{value: 1, text: 'None'}, {value: 2, text: 'On Course'}, {value: 3, text: 'Not Running'}]" data-pk="1" data-title="Edit Beverage Cart">On Course</a></dd>
 				</dl>
 				<dl>
 					<dt>Halfway House</dt>
-					<dd>Open</dd>
+					<dd><a href="#" id="fieldname" data-editable data-type="select" data-source="[{value: 1, text: 'None'}, {value: 2, text: 'Open'}, {value: 3, text: 'Closed'}]" data-pk="1" data-title="Edit Halfway House">Open</a></dd>
 				</dl>
 				<dl>
 					<dt>Practice Facilities</dt>
-					<dd>Open</dd>
+					<dd><a href="#" id="fieldname" data-editable data-type="select" data-source="[{value: 1, text: 'None'}, {value: 2, text: 'Open'}, {value: 3, text: 'Closed'}]" data-pk="1" data-title="Edit Practice Facilities">Open</a></dd>
 				</dl>
 				<dl>
 					<dt>Tee Time URL</dt>
@@ -66,7 +66,7 @@ fabricator: false
 				</dl>
 				<dl>
 					<dt>For Date</dt>
-					<dd>Tuesday, May 23</dd>
+					<dd><a href="#" id="fieldname" data-editable data-type="combodate" data-format="YYYY-MM-DD" data-viewformat="DD/MM/YYYY" data-template="D / MMM / YYYY" data-pk="1" data-title="Edit Date">23/08/2017</a></dd>
 				</dl>
 				<dl>
 					<dt>Posted by</dt>
