--- a/src/materials/components/edit_in_place/edit_in_place.html
+++ b/src/materials/components/edit_in_place/edit_in_place.html
@@ -14,6 +14,9 @@ notes: |
   </pre>
 
   Check out the <a href="https://vitalets.github.io/x-editable/demo-bs3.html">X-editable demos</a> for more (the select and checkbox `data-type`s should be of particular interest).
+
+  <div class="alert alert-success"><i class="glyphicon glyphicon-info-sign"></i>&nbsp; Also, <a href="cards-edit-in-place.html">see an application of edit-in-place for Course Conditions cards</a> and how the interaction should work.</div>
+
 ---
 
 <p>Normal text:<br>
